# claude-master

./: .gitignore  CLAUDE.md  README.md  claude-master.toml.example  claude-wrap  config.py  dashboard.py  limit_watcher.py  monitor.py  process_scanner.py  pty_constants.py  pty_emulator.py  pty_proxy.py  pty_renderer.py  pty_scroll.py  pyproject.toml  resume_scheduler.py  socket_client.py  tmux_manager.py
debug/: .gitignore  README.md  client_replay.py  display_oracle.py  mock_claude.py  pipeline_replay.py  record_session.sh  replay.py  tmux_harness.py
debug/fixtures/choice-dialog/: meta.json
debug/fixtures/cogitated-on-resize/: meta.json
debug/fixtures/cogitated-render/: meta.json
debug/fixtures/context-compact/: meta.json
debug/fixtures/long-edit-diff/: meta.json
debug/snapshots/: choice-dialog.expected.txt  cogitated-on-resize.expected.txt  cogitated-render.expected.txt  context-compact.expected.txt  footer-recovery.expected.txt  footer-recovery.tmux.txt  long-edit-diff.expected.txt  resume-burst.expected.txt  sample-recent.expected.txt  spinner-verb-leak.expected.txt
debug/tests/: conftest.py  test_choice_dialog.py  test_config_file.py  test_display_oracle.py  test_host_flow_scrollback.py  test_host_stdin_dispatch.py  test_is_footer_text.py  test_log_leak.py  test_multi_client.py  test_pagekey_scroll.py  test_pipeline_replay.py  test_pty_proxy_size.py  test_renderer_resize.py  test_replay_fixtures.py  test_resize_fixtures.py  test_resume_burst.py  test_scroll_renderer.py  test_session_log.py  test_size_policy.py  test_tui_emulator.py  test_wheel_scroll.py
(+3 files in other folders)
